worked on issue #181 - chart heights are specified in budgeteer.css and applied to the div instead of the canvas - allowing the chart to resize properly after being collapsed

--- a/budgeteer-web-interface/src/main/webapp/css/budgeteer/budgeteer.css
+++ b/budgeteer-web-interface/src/main/webapp/css/budgeteer/budgeteer.css
@@ -99,10 +99,16 @@ table.smallLastColumn tr td:last-child {
 }
 
 .chartCanvas {
-	height: 450px;
+    height: 450px;
 }
 	
-	
-	
+.personDetails {
+    height: 210px;
+}
+
+.budgetDetails {
+	height: 270px;
+}
+
 	
 	
